# pse-edge-data-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: companies.csv
pse_data_scraper/: cli.py  client.py  combiner.py  downloader.py  models.py  pipeline.py  scraper.py  utils.py
tests/: conftest.py  test_client.py  test_combiner.py  test_downloader.py  test_models.py  test_scraper.py  test_sort.py  test_utils.py
