[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pse-data-scraper"
version = "0.1.0"
description = "Python package for downloading and exporting historical PSE OHLCV data."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.28",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/AlvinTubtub/pse-data-scraper"
Repository = "https://github.com/AlvinTubtub/pse-data-scraper"
Issues = "https://github.com/AlvinTubtub/pse-data-scraper/issues"

[project.scripts]
pse = "pse_data_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pse_data_scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

keywords = [
    "pse",
    "stocks",
    "philippines",
    "ohlcv",
    "finance",
    "investing",
    "historical-data"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    { name = "Alvin Tubtub" }
]